--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
         }
       })(window.location);
     </script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </body>
 </html>
