--- a/index.html
+++ b/index.html
@@ -7,21 +7,13 @@
 
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
+    <link rel="icon" type="image/png" sizes="48x48" href="https://yourdomain.com/favicon-48x48.png" />
+    
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="192x192"
-      href="/android-chrome-192x192.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="512x512"
-      href="/android-chrome-512x512.png"
-    />
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png" />
 
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
@@ -30,6 +22,7 @@
   <body class="bg-gray-100">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
     <script type="text/javascript">
       (function (l) {
         if (l.search[1] === "/") {
