--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Urban Aura Services</title>
 
-    <link rel="icon" type="image/png" sizes="48x48" href="https://urbanauracs.com/logo.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="https://urbanauracs.com/logo2.png" />
 
-    <link rel="icon" type="image/png" sizes="any" href="https://urbanauracs.com/logo.png" />
+    <link rel="icon" type="image/png" sizes="any" href="https://urbanauracs.com/logo2.png" />
 
-    <link rel="apple-touch-icon" href="https://urbanauracs.com/logo.png" />
+    <link rel="apple-touch-icon" href="https://urbanauracs.com/logo2.png" />
 
-    <link rel="shortcut icon" type="image/png" href="https://urbanauracs.com/logo.png" />
+    <link rel="shortcut icon" type="image/png" href="https://urbanauracs.com/logo2.png" />
 
     <link rel="manifest" href="/site.webmanifest" />
   </head>
